--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     margin: 0;
     padding: 0;
 }
+
 body {
     box-sizing: border-box;
     background-color:var(--cor-primaria);
@@ -30,22 +31,23 @@ body {
 
 .cabecalho__menu__link{
     font-family: var(--fonte-primaria);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     color:var(--cor-terciaria);
     text-decoration: none;
 }
 
 .apresentacao{
-    padding: 5.5% 15%;
+    padding: 5% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 82px;
 }
 
 
 .apresentacao__conteudo{
-    width: 615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -60,7 +62,7 @@ body {
 }
 
 .apresentacao__conteudo__texto{
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: var(--fonte-primaria);
     
 }
@@ -74,18 +76,18 @@ body {
 .apresentacao__links__subtitulo{
     font-family: var(--fonte-secundaria);
     font-weight: 400;
-    font-size: 24px;
+    font-size: 1.5rem;
 
 }
-.apresentacao__links__link{
+.apresentacao__links__navegacao{
     display: flex;
     justify-content: center;
     gap: 16px;
-    width: 378px;
+    width: 50%;
     text-align: center;
     border: 3px solid  var(--cor-terciaria);
     border-radius: 8px;
-    font-size: 24px;
+    font-size: 1.5rem;
     padding: 21.5px 0;
     text-decoration: none;
     color: var(--cor-primaria);
@@ -94,13 +96,18 @@ body {
     font-weight: 600;
     
 }
+
 .imagem__links{
-    width: 32px;
+    width: 2rem;    
 }
 
-.apresentacao__links__link:hover{
+.apresentacao__links__navegacao:hover{
     background-color:var(--cor-secundaria);
     
+}
+
+.apresentacao__imagem {
+    width: 50%;
 }
 
 .rodape {
@@ -109,6 +116,24 @@ body {
     background-color: var(--cor-terciaria);
     text-align: center;
     font-family: var(--fonte-primaria);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
+}
+
+@media (max-width: 1200px){
+    .cabecalho{
+        padding: 10%;
+    }
+    .cabecalho__menu{
+        justify-content: center;
+    }
+
+    .apresentacao{
+        flex-direction: column-reverse;
+        padding: 5%;
+    }
+
+    .apresentacao__conteudo{
+        width: auto;
+    }
 }
